--- a/JavaScript/this-variable-test.html
+++ b/JavaScript/this-variable-test.html
@@ -1,10 +1,8 @@
 <html>
 <head>
     <title>jQuery SandBox</title>
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/custom.css">
-    <script type="text/javascript" src='assets/jquery.js'></script>
-    <script type="text/javascript" src='assets/bootstrap.min.js'></script>
+    <link rel="stylesheet" href="../_libraries/bootstrap.css"/>
+    <script type="text/javascript" src='../_libraries/bootstrap+jquery.js'></script>
     <script type="text/javascript">
 
         $(function(){
