--- a/AngularJS/1-angular-basics/index.html
+++ b/AngularJS/1-angular-basics/index.html
@@ -11,7 +11,7 @@
 </head>
 <body ng-app="myApp">
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/view1">ng-repeat demo</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
