--- a/AngularJS/1-angular-basics/view1/view1.html
+++ b/AngularJS/1-angular-basics/view1/view1.html
@@ -1,1 +1,5 @@
-<p>This is the partial for view 1.</p>
+<h3>ng-repeat</h3>
+<table>
+    <tr><th ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]">col. #{{i+1}}</th></tr>
+    <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td ng-repeat="j in [0, 1, 2, 3, 4, 5, 6, 7]">a{{i+1}}{{j+1}}</td></tr>
+</table>
