--- a/Yii-2-Offline-Docs/guide-db-query-builder.html
+++ b/Yii-2-Offline-Docs/guide-db-query-builder.html
@@ -450,7 +450,13 @@ For example,</p>
 <pre><code class="language-php"><span style="color: #0000BB">$query&nbsp;</span><span style="color: #007700">=&nbsp;(new&nbsp;\</span><span style="color: #0000BB">yii</span><span style="color: #007700">\</span><span style="color: #0000BB">db</span><span style="color: #007700">\</span><span style="color: #0000BB">Query</span><span style="color: #007700">())<br />&nbsp;&nbsp;&nbsp;&nbsp;-&gt;</span><span style="color: #0000BB">from</span><span style="color: #007700">(</span><span style="color: #DD0000">'user'</span><span style="color: #007700">)<br />&nbsp;&nbsp;&nbsp;&nbsp;-&gt;</span><span style="color: #0000BB">indexBy</span><span style="color: #007700">(function&nbsp;(</span><span style="color: #0000BB">$row</span><span style="color: #007700">)&nbsp;{<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return&nbsp;</span><span style="color: #0000BB">$row</span><span style="color: #007700">[</span><span style="color: #DD0000">'id'</span><span style="color: #007700">]&nbsp;.&nbsp;</span><span style="color: #0000BB">$row</span><span style="color: #007700">[</span><span style="color: #DD0000">'username'</span><span style="color: #007700">];<br />&nbsp;&nbsp;&nbsp;&nbsp;})-&gt;</span><span style="color: #0000BB">all</span><span style="color: #007700">();</span></code></pre>
 <p>The anonymous function takes a parameter <code>$row</code> which contains the current row data and should return a scalar
 value which will be used as the index value for the current row.</p>
-<h3>Batch Query <span id="batch-query"></span> <a href="#batch-query" id="batch-query" class="hashlink">&para;</a></h3><p>When working with large amounts of data, methods such as <a href="yii-db-query.html#all()-detail">yii\db\Query::all()</a> are not suitable
+<h3>Batch Query
+     <span class="notes">
+         'Batch' does not mean that data is fetched using 'LIMIT .. OFFSET ..' SQL clause.
+         <br/>It means that data is loaded into memory in batches. It is a minor, yet useful memory improvement.
+    </span>
+
+    <span id="batch-query"></span> <a href="#batch-query" id="batch-query" class="hashlink">&para;</a></h3><p>When working with large amounts of data, methods such as <a href="yii-db-query.html#all()-detail">yii\db\Query::all()</a> are not suitable
 because they require loading all data into the memory. To keep the memory requirement low, Yii
 provides the so-called batch query support. A batch query makes uses of the data cursor and fetches
 data in batches.</p>
