--- a/AngularJS/search-and-highlight-directive/index.html
+++ b/AngularJS/search-and-highlight-directive/index.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="app.css">
-  <script src="lib/modernizr.js"></script>
+  <link rel="stylesheet" href="bootstrap.css">
+  <style>
+    .highlightedText {
+      background-color: yellow;
+    }
+  </style>
 </head>
-<body ng-app="myApp">
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+<body ng-app="myApp" ng-controller="MainCtrl">
 
-  <div ng-view></div>
+<div class="container">
 
-  <div>Angular seed app: v <span app-version></span></div>
+  <h1 class="jumbotron">
+    A Light Weight Search and Highlight Directive for AngularJs
+  </h1>
 
-  <script src="../../_libraries/bootstrap+jquery.js"></script>
-  <script src="lib/angular.min.js"></script>
-  <script src="lib/angular-route.min.js"></script>
+  <p><label>Search and Highlight: <input ng-model="query" class="form-control"></label></p>
+
+  <table class="table table-bordered">
+    <thead>
+    <tr>
+      <td>Name</td>
+      <td>City</td>
+      <td>About</td>
+    </tr>
+    </thead>
+    <tbody nvd-highlight-text="query">
+    <tr id="some-id">
+      <td>Naveed</td>
+      <td>Mtn</td>
+      <td>The author ...</td>
+    </tr>
+    <tr>
+      <td>Azhar</td>
+      <td>Ryk</td>
+      <td>A brilliant Physicist ...</td>
+    </tr>
+    <tr>
+      <td>Masood</td>
+      <td>Rpr</td>
+      <td>The IT guy ...</td>
+    </tr>
+    <tr>
+      <td>Bilawal</td>
+      <td>Lhr</td>
+      <td>A great civil engineer ...</td>
+    </tr>
+    </tbody>
+  </table>
+
+  <p nvd-highlight-text="query">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aspernatur, assumenda autem consectetur dignissimos
+    distinctio dolore doloribus dolorum esse harum id laboriosam laborum necessitatibus nemo numquam quia sequi vero!
+  </p>
+
+</div>
+
+  <script src="bootstrap+jquery.js"></script>
+  <script src="angular.min.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
 </body>
 </html>
