--- a/JavaScript/window.location.html
+++ b/JavaScript/window.location.html
@@ -4,13 +4,7 @@
     <link rel="stylesheet" href="../_libraries/bootstrap.css"/>
     <script type="text/javascript" src='../_libraries/bootstrap+jquery.js'></script>
     <script type="text/javascript" src='common.js'></script>
-    <script type="text/javascript">
-        (function () {
-
-
-
-        })();
-    </script>
+    <script type="text/javascript" src="location-test/test.js"></script>
 </head>
 
 <body>
